--- a/css/twentytwenty.css
+++ b/css/twentytwenty.css
@@ -102,6 +102,17 @@
 .twentytwenty-container .cmpcontent {
   display: block;
   max-width: 100%;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.twentytwenty-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
 }
 
 .twentytwenty-container .cmpcontent.twentytwenty-before {
@@ -110,11 +121,6 @@
   bottom: 0;
   left: 0;
   right: 0;
-}
-
-.twentytwenty-container cmpcomponent {
-  width: 100%;
-  max-width: 100%;
 }
 
 .twentytwenty-container.active .twentytwenty-overlay, .twentytwenty-container.active :hover.twentytwenty-overlay {
